--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,7 +19,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
+.authenticate {
   margin: 0;
   display: flex;
   place-items: center;
@@ -27,7 +27,7 @@ body {
   min-height: 100vh;
 }
 
-#app {
+article {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
